--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -58,8 +58,8 @@
         <div class="container-fluid">
 
             <div class="section-header">
-                <h2>Event Venue</h2>
-                <p>Event venue location info and gallery</p>
+                <h2>{{ 'f.nuestro.ministerio' | trans }}</h2>
+                <p>{{ 'f.imagenes.direccion' | trans }}</p>
             </div>
 
             <div class="row no-gutters">
@@ -160,7 +160,7 @@
     <section id="subscribe">
         <div class="container wow fadeInUp">
             <div class="section-header">
-                <h2>Newsletter</h2>
+                <h2>{{ 'f.newsletter' | trans }}</h2>
                 <p>{{ 'f.suscribirse.subtitulo' | trans }}</p>
             </div>
 
