--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -7,8 +7,8 @@
     <section id="speakers" class="wow fadeInUp">
         <div class="container">
             <div class="section-header">
-                <h2>Event Speakers</h2>
-                <p>Here are some of our speakers</p>
+                <h2>{{ 'f.eventos' | trans }}</h2>
+                <p>{{ 'f.eventos.subtitulo' | trans }}</p>
             </div>
 
             <div class="row">
