--- a/src/AV/FrontendBundle/Resources/views/Frontend/events.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Frontend/events.html.twig
@@ -5,8 +5,8 @@
     <section id="speakers" class="wow fadeInUp">
         <div class="container">
             <div class="section-header">
-                <h2>Event Speakers</h2>
-                <p>Here are some of our speakers</p>
+                <h2>{{ textHeader }}</h2>
+                {#<p>Here are some of our speakers</p>#}
             </div>
 
             <div class="row">
