--- a/app/Resources/views/frontend/frontend.layout.4.footer.html.twig
+++ b/app/Resources/views/frontend/frontend.layout.4.footer.html.twig
@@ -92,13 +92,19 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
+                        <h4>{{ 'f.otros.enalces' | trans }}</h4>
                         <ul>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+                            <li><i class="fa fa-angle-right"></i>
+                                <a href="{{ path('frontend_homepage') }}">Home</a>
+                            </li>
+                            <li><i class="fa fa-angle-right"></i>
+                                <a href="{{ path('frontend_ministerio') }}">{{ 'nav.ministerio' | trans }}</a>
+                            </li>
+                            <li><i class="fa fa-angle-right"></i>
+                                <a href="#">{{ 'nav.donaciones' | trans }}</a>
+                            </li>
+                            {#<li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>#}
+                            {#<li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>#}
                         </ul>
                     </div>
 
